docs/0.17/_sources/api/gammapy.modeling.models.DiskSpatialModel.rst.txt
DiskSpatialModel
================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: DiskSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~DiskSpatialModel.covariance
      ~DiskSpatialModel.default_parameters
      ~DiskSpatialModel.e
      ~DiskSpatialModel.edge
      ~DiskSpatialModel.evaluation_radius
      ~DiskSpatialModel.lat_0
      ~DiskSpatialModel.lon_0
      ~DiskSpatialModel.parameters
      ~DiskSpatialModel.phi
      ~DiskSpatialModel.phi_0
      ~DiskSpatialModel.position
      ~DiskSpatialModel.position_error
      ~DiskSpatialModel.r_0
      ~DiskSpatialModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~DiskSpatialModel.__call__
      ~DiskSpatialModel.copy
      ~DiskSpatialModel.create
      ~DiskSpatialModel.evaluate
      ~DiskSpatialModel.evaluate_geom
      ~DiskSpatialModel.from_dict
      ~DiskSpatialModel.from_parameters
      ~DiskSpatialModel.integrate
      ~DiskSpatialModel.plot
      ~DiskSpatialModel.plot_error
      ~DiskSpatialModel.to_dict
      ~DiskSpatialModel.to_region

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: e
   .. autoattribute:: edge
   .. autoattribute:: evaluation_radius
   .. autoattribute:: lat_0
   .. autoattribute:: lon_0
   .. autoattribute:: parameters
   .. autoattribute:: phi
   .. autoattribute:: phi_0
   .. autoattribute:: position
   .. autoattribute:: position_error
   .. autoattribute:: r_0
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integrate
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: to_dict
   .. automethod:: to_region
